[package]
name = "rabu"
version = "0.2.2"
edition = "2021"
description = "Rust Audio Basic Utilies"
authors = ["Wouter Ensink"]
license = "MIT"
homepage = "https://github.com/w-ensink/rabu"
repository = "https://github.com/w-ensink/rabu"
readme = "README.md"
categories = ["multimedia::audio"]
keywords = ["audio", "utilities"]

[dependencies]
derive_more = "0.99.17"
partial-min-max = "0.4.0"
serde = { version = "1.0.147", features = ["derive"] }


[dev-dependencies]
test-case = "2.2.2"